# gbpplanner

./: .gitignore  CLAUDE.md  CMakeLists.txt  payload_trajectory.csv  plot_trajectory.py  traj.txt
assets/scripts/: create_circle_clutter.py  create_distance_field.py
config/: config.json  junction.json  junction_twoway.json  obstacles.json
inc/: DynamicsFactor.h  Globals.h  ObstacleFactor.h  Payload.h  Robot.h  RobotGTSAM.h  Simulator.h
inc/gbp/: Factor.h  Factorgraph.h
src/: DynamicsFactor.cpp  Globals.cpp  ObstacleFactor.cpp  Payload.cpp  Robot.cpp  RobotGTSAM.cpp  Simulator.cpp  Utils.cpp  test.cpp
src/gbp/: Factor.cpp  Factorgraph.cpp  Variable.cpp
